--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.50.1",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.1",
